--- a/app/src/main/resources/static/student/index.html
+++ b/app/src/main/resources/static/student/index.html
@@ -120,7 +120,7 @@
       {{#each this}}
         <tr data-no="{{no}}" onclick="getStudent(event)">
           <td>{{no}}</td>
-          <td><img src="https://jafdpuys3518.edge.naverncp.com/qRPqP06Ry7/{{photo}}?type=f&w=20&h=20&faceopt=true&ttype=jpg" class="photo20x20">{{name}}</td>
+          <td><img src="https://xzydglxl3606.edge.naverncp.com/AZ8FPX7POW/{{photo}}?type=f&w=20&h=20&ttype=jpg" class="photo20x20">{{name}}</td>
           <td>{{#if working}}예{{else}}아니오{{/if}}</td>
           <td>{{tel}}</td>
         </tr>
